feat: add city-specific support for AI messages and update version to 0.8.1